@@ -55,6 +55,7 @@
       <preference id="default-private-key-pref" name="extensions.firegpg.default_private_key" type="string"/>
       <preference id="gpg-path-pref" name="extensions.firegpg.gpg_path" type="string"/>
       <preference id="specify-gpg-path-pref" name="extensions.firegpg.specify_gpg_path" type="bool"/>
+      <preference id="no-gpg-agent-pref" name="extensions.firegpg.no_gpg_agent" type="bool"/>
       <preference id="show-web-site-pref" name="extensions.firegpg.show_website" type="bool"/>
       <preference id="result-always-in-new-window-pref" name="extensions.firegpg.result_always_in_new_window" type="bool"/>
     </preferences>
@@ -69,6 +70,9 @@
               label="&result-always-in-new-window;"/>
 
     <!-- show web site -->
+    <checkbox id="no-gpg-agent-checkbox" preference="no-gpg-agent-pref" checked="true" label="&no-gpg-agent-checkbox;"/>
+    
+    <!-- don't use gpg agent -->
     <checkbox id="show-website-checkbox" preference="show-web-site-pref" checked="true" label="&show-website-checkbox;"/>
 
     <!-- list of private keys -->
